--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -17,7 +17,7 @@
 
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=8cutfsqvlm"></script>
 
-    <title>React App</title>
+    <title>요양상담 편안하게 | 또하나의가족</title>
   </head>
   <body>
     <div id="modal-content"></div>
